--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1649,6 +1649,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -4006,7 +4009,6 @@ EncoderInertialCapture</property>
                                                 <child>
                                                   <widget class="GtkButton" id="button_preferences_not_menu_minimize">
                                                     <property name="width_request">50</property>
-                                                    <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="can_default">True</property>
                                                     <property name="receives_default">True</property>
@@ -18075,7 +18077,6 @@ Concentric</property>
                                                 <child>
                                                   <widget class="GtkButton" id="button_preferences_not_menu_minimize1">
                                                     <property name="width_request">50</property>
-                                                    <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="can_default">True</property>
                                                     <property name="receives_default">True</property>
@@ -23938,6 +23939,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
